[package]
name = "streamwatch-tool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

clap = "2.33.3"

sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite", "chrono" ] }

chrono = "0.4.19"

anyhow = "1.0"

regex = "1"
once_cell = "1.4.0"
